Fixed bug in flash set() function. Login now bounces user to proper page after login. Updated jQuery version to 2.0.3

--- a/application/views/account/login.phtml
+++ b/application/views/account/login.phtml
@@ -19,18 +19,10 @@
                     "remember": $("input[name='remember']", page.form).attr('checked') ? 1 : 0
                 },
                 "success": function(response) {
-
                     if (response.status === 'good') {
                         location.href = "<?php echo htmlspecialchars($this->locale->route("/{$this->bounce}")); ?>";
-                        return;
                     } else {
-                        if (response.message) {
-                            var message = response.message;
-                        } else {
-                            var message = "There was a problem logging you in.";
-                        }
-
-                        alert(message);
+                        alert(response.message || "There was a problem logging you in.");
                     }
                 }
             });
