--- a/application/views/templates/header.phtml
+++ b/application/views/templates/header.phtml
@@ -3,15 +3,19 @@
     <head>
         <title><?php echo htmlspecialchars($this->meta_title ? $this->meta_title : core::config()->system['site_name']); ?></title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="description" content="<?php if ($this->meta_description) { echo htmlspecialchars($this->meta_description); } ?>" />
-        <meta name="keywords" content="<?php if ($this->meta_keywords) { echo htmlspecialchars($this->meta_keywords); } ?><" />
-        <!-- <link rel="shortcut icon" href="/static/favicon.ico" /> -->
-
+        <?php if ($this->meta_description): ?>
+            <meta name="description" content="<?php echo htmlspecialchars($this->meta_description); ?>" />
+        <?php endif; ?>
+        <?php if ($this->meta_keywords): ?>
+            <meta name="keywords" content="<?php echo htmlspecialchars($this->meta_keywords); ?>" />
+        <?php endif; ?>
         <?php if ($this->canonical_url): ?>
             <link rel="canonical" href="<?php echo core::http()->server('url') . $this->canonical_url; ?>">
         <?php endif; ?>
 
-        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <!-- <link rel="shortcut icon" href="/static/favicon.ico" /> -->
+
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/public/css/Core.css" media="all" />
         <link rel="stylesheet" type="text/css" href="/public/css/main.css" media="all" />
         <script type="text/javascript" src="/public/js/Core.js"></script>
