--- a/application/dialogs/account/create/body.phtml
+++ b/application/dialogs/account/create/body.phtml
@@ -1,6 +1,6 @@
 <form name="login" style="margin: 0 auto; display: block;">
     <div class="regular-body" style="padding: 0 0 10px 0;">
-        <div class="padded info" id="message">
+        <div class="padded info message">
             Please fill out the following fields in order to create an account
         </div>
         <table width="100%">
