--- a/application/views/account/login.phtml
+++ b/application/views/account/login.phtml
@@ -11,6 +11,11 @@
         "verify": function(e) {
             e.preventDefault();
 
+            var emailEl         = $("input[name='email']", page.form);
+            var passwordEl      = $("input[name='password']", page.form);
+            var messageEl       = $("div#message", page.form);
+            var originalMessage = messageEl.text();
+
             $.ajax({
                 "url": "<?php echo core::http()->server('surl'); ?>account/ajax/login/verify?rc=<?php echo core::http()->get_ref(); ?>",
                 "data": {
@@ -26,7 +31,30 @@
                             location.href = location.href;
                         <?php endif; ?>
                     } else {
-                        alert(response.message || "There was a problem logging you in.");
+                        emailEl.addClass('error');
+                        passwordEl.addClass('error');
+
+                        $("label[name='email']", page.form).addClass('error');
+                        $("label[name='password']", page.form).addClass('error');
+
+                        messageEl
+                            .text(response.message || "There was a problem logging you in.")
+                            .addClass("error")
+                            .removeClass("info");
+
+                        setTimeout(function() {
+                            messageEl
+                                .text(originalMessage)
+                                .addClass("info")
+                                .removeClass("error");
+
+                            emailEl.removeClass('error');
+                            passwordEl.removeClass('error');
+
+                            $("label[name='email']", page.form).removeClass('error');
+                            $("label[name='password']", page.form).removeClass('error');
+
+                        }, 5500);
                     }
                 }
             });
@@ -41,35 +69,31 @@
     <div class="box">
         <div class="regular-head">Login</div>
         <div class="regular-body">
+
+            <?php if ($this->message): ?>
+                <div class="padded info" id="message"><?php echo htmlspecialchars($this->message); ?></div>
+            <?php else: ?>
+                <div class="padded info" id="message">Please login to continue</div>
+            <?php endif; ?>
+
             <table width="100%">
-                <?php if ($this->message): ?>
-                    <tr>
-                        <td width="90" align="right">
-                            &nbsp;
-                        </td>
-                        <td width="10">&nbsp;</td>
-                        <td>
-                            <div><?php echo htmlspecialchars($this->message); ?></div>
-                        </td>
-                    </tr>
-                <?php endif; ?>
 
                 <tr>
                     <td width="90" align="right">
-                        Email
+                        <label name="email"><strong>Email</strong></label>
                     </td>
                     <td width="10">&nbsp;</td>
                     <td>
-                        <input type="text" name="email" style="width: 375px;" tabindex="1" />
+                        <input type="text" name="email" class="h2" style="width: 375px; font-size: 14px; line-height: 18px; padding: 5px 8px;" tabindex="1" />
                     </td>
                 </tr>
                 <tr>
                     <td width="90" align="right">
-                        Password
+                        <label name="password"><strong>Password</strong></label>
                     </td>
                     <td width="10">&nbsp;</td>
                     <td>
-                        <input type="password" name="password" style="width: 220px;" tabindex="2" />
+                        <input type="password" name="password" class="h2" style="width: 220px; font-size: 14px; line-height: 18px; padding: 5px 8px;" tabindex="2" />
                         &nbsp;
                         <a href="/account/passwordretreive" class="button">Forgot Your Password?</a>
                     </td>
@@ -77,7 +101,7 @@
             </table>
         </div>
         <div class="regular-foot">
-            <input type="submit" value="Login &raquo;" tabindex="4" style="margin: 3px 0 0 100px;" />
+            <input type="submit" value="Login &raquo;" tabindex="4" style="margin: 3px 10px 5px 100px;" />
             <input type="checkbox" name="remember" id="login_remember" tabindex="3" /> <label for="login_remember">Keep me logged in</label>
         </div>
     </div>
