--- a/application/dialogs/account/login/afterLoad.phtml
+++ b/application/dialogs/account/login/afterLoad.phtml
@@ -10,7 +10,7 @@
         var passwordEl = $("input[name='password']", elements.dialog);
 
         Core.ajax({
-            "url": "/account/ajax/login/verify",
+            "url": "<?php echo core::http()->server('surl'); ?>/account/ajax/login/verify",
             "data": {
                 "email":    $("input[name='email']", elements.dialog).val(),
                 "password": $("input[name='password']", elements.dialog).val(),
