--- a/application/views/account/password_lost.phtml
+++ b/application/views/account/password_lost.phtml
@@ -11,24 +11,45 @@
             "send": function(e) {
                 e.preventDefault();
 
-                $.ajax({
-                    "url": "<?php echo core::http()->server('surl'); ?>account/ajax/password_lost?rc=<?php echo core::http()->get_ref(); ?>",
+                var messageEl       = $(".message", page.form);
+                var originalMessage = messageEl.text();
+
+                Core.ajax({
+                    "url": "<?php echo core::http()->server('surl'); ?>account/ajax/password_lost",
                     "data": {
                         "email": $("input[name='email']", page.form).val()
                     },
                     "success": function(response) {
-                        var err = $(".message", page.form);
                         if (response && response.status === 'good') {
-                            err.removeClass('error');
+                            messageEl
+                                .addClass("info")
+                                .removeClass("error");
                             alert("Please check your email. You have been sent a link to reset your password.");
                         } else {
-                            err.css('display', 'block');
-                            err.addClass('error');
-                            if (response && response.message) {
-                                err.html(response.message);
-                            } else {
-                                err.html('There was a problem requesting a new password, please make sure your email address is correct.');
-                            }
+                            messageEl
+                                .addClass("error")
+                                .removeClass("info")
+                                .html(response.message || "There was a problem requesting a new password, please make sure your email address is correct.");
+
+                            $("input[name='email']", page.form)
+                                .addClass("error");
+
+                            $("label[name='email']", page.form)
+                                .addClass("error");
+
+                            setTimeout(function(){
+                                messageEl
+                                    .text(originalMessage)
+                                    .addClass("info")
+                                    .removeClass("error");
+
+                                $("input[name='email']", page.form)
+                                    .removeClass("error");
+
+                                $("label[name='email']", page.form)
+                                    .removeClass("error");
+
+                            }, 3500);
                         }
                     }
                 });
@@ -48,16 +69,16 @@
 
             <div class="regular-body">
 
-                <div class="message">Please enter your email address. We will send you a verification link in order to reset your password.</div>
+                <div class="padded info message">Please enter your email address. We will send you a verification link in order to reset your password.</div>
 
                 <table width="100%">
                     <tr>
                         <td width="90" align="right">
-                            Email
+                            <label name="email"><strong>Email</strong></label>
                         </td>
                         <td width="10">&nbsp;</td>
                         <td>
-                            <input type="text" name="email" class="h1" style="width: 375px;" tabindex="1" />
+                            <input type="text" name="email" style="width: 375px; font-size: 14px; line-height: 18px; padding: 5px 8px; margin: 5px 0 10px 0;" tabindex="1" />
                         </td>
                     </tr>
                 </table>
