--- a/application/views/admin/user/view.phtml
+++ b/application/views/admin/user/view.phtml
@@ -183,7 +183,9 @@
                         </div>
                     </div>
                     <div class="table-foot">
-                        <button class="good" style="margin: 0 0 0 177px;">Update</button>
+                        <div class="padded">
+                            <button class="good" style="margin-left: 177px;">Update</button>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -264,7 +266,9 @@
                         </div>
                     </div>
                     <div class="table-foot">
-                        <button class="good" style="margin: 0 0 0 177px;">Update</button>
+                        <div class="padded">
+                            <button class="good" style="margin-left: 177px;">Update</button>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -294,7 +298,9 @@
                         </div>
                     </div>
                     <div class="table-foot">
-                        <button class="good">Update</button>
+                        <div class="padded">
+                            <button class="good">Update</button>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -324,7 +330,9 @@
                         </div>
                     </div>
                     <div class="table-foot">
-                        <button class="good">Update</button>
+                        <div class="padded">
+                            <button class="good">Update</button>
+                        </div>
                     </div>
                 </form>
             </div>
