--- a/www/public/css/Core.css
+++ b/www/public/css/Core.css
@@ -112,16 +112,19 @@ form, input, select, textarea, button {
 }
 
 form select {
-    min-width: 100px;
+    min-width: 200px;
     margin: 3px 0;
     font-size: 12px;
     font-weight: normal;
-    line-height: 21px;
-    padding: 3px 5px;
+    line-height: 18px;
     border: 1px solid #bbb;
     border-bottom: 1px solid #ccc;
     outline: none;
     font-family: 'lucida grande', tahoma, verdana, arial, sans-serif;
+
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 form input[type="text"],
@@ -129,10 +132,10 @@ form input[type="password"],
 form textarea {
     overflow: hidden;
     margin: 3px 0;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: normal;
     line-height: 19px;
-    padding: 3px 5px;
+    padding: 4px 8px;
     border: 1px solid #aaa;
     border-bottom: 1px solid #999;
     outline: none;
