--- a/application/views/account/password.phtml
+++ b/application/views/account/password.phtml
@@ -5,7 +5,8 @@
         var page = {
 
             "onload": function() {
-                page.form = $("form[name='password']").on("submit", page.submit);
+                page.form = $("form[name='password']")
+                    .on("submit", page.submit);
             },
 
             "submit": function(e) {
@@ -16,14 +17,15 @@
 
                 $('.tiny.error').css('display', 'none').html('');
 
-                $.ajax({
-                    "url": "/account/password/update?rc=<?php echo core::http()->get_ref(); ?>",
+                Core.ajax({
+                    "url": "/account/password/update",
                     "data": {
                         "current_password": $("input[name='current_password']", page.form).val(),
-                        "password1":         $("input[name='password1']", page.form).val(),
-                        "password2":         $("input[name='password2']", page.form).val()
+                        "password1":        $("input[name='password1']", page.form).val(),
+                        "password2":        $("input[name='password2']", page.form).val()
                     },
                     "success": function(response) {
+
                         if (response && response.status === 'good') {
                             $("input[name='current_password']", page.form).val(''),
                             $("input[name='password1']", page.form).val(''),
@@ -31,13 +33,7 @@
 
                             alert("Your password has been updated");
                         } else {
-                            if (response && response.message) {
-                                var message = response.message;
-                            } else {
-                                var message = "Your password could not be updated";
-                            }
-
-                            alert(message);
+                            alert(response.message || "Your password could not be updated");
 
                             if (response && response.errors) {
                                 for (var k in response.errors) {
@@ -47,7 +43,8 @@
                         }
                         save_button.removeAttr('disabled');
                     },
-                    "error": function() {
+                    "error": function(response) {
+                        console.log(response);
                         save_button.removeAttr('disabled');
                     }
                 });
@@ -62,7 +59,7 @@
 
     <form name="password" style="margin: 0 0 0 200px; display: block; width: 600px;">
         <div class="box">
-            <div class="regular-head">Login</div>
+            <div class="regular-head">Change Password</div>
             <div class="regular-body">
                 <table>
                     <tr>
