--- a/application/views/admin/templates/header.phtml
+++ b/application/views/admin/templates/header.phtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title><?php echo htmlspecialchars($this->meta_title ? $this->meta_title : core::config()->system['site_name']); ?></title>
+        <title><?php echo htmlspecialchars($this->meta_title ? $this->meta_title : core::config()['core']['site_name']); ?></title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <?php if ($this->meta_description): ?>
             <meta name="description" content="<?php echo htmlspecialchars($this->meta_description); ?>" />
@@ -25,9 +25,6 @@
         <link rel="stylesheet" type="text/css" href="/public/css/CoreDialog.css" media="all" />
         <script type="text/javascript" src="/public/js/CoreDialog.js"></script>
 
-        <!-- Files -->
-        <link rel="stylesheet" type="text/css" href="/public/css/files.css" media="all" />
-
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -41,7 +38,7 @@
     <body>
         <div class="default">
             <div class="head">
-                <div class="logo"><label><?php echo htmlspecialchars(core::config()->system['site_name']); ?></label></div>
+                <div class="logo"><label><?php echo htmlspecialchars(core::config()['core']['site_name']); ?></label></div>
                 <nav>
                     <ul>
                         <?php if (core::auth()->logged_in()): ?>
