--- a/application/views/error.phtml
+++ b/application/views/error.phtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title><?php echo htmlspecialchars($this->meta_title ? $this->meta_title : core::config()->system['site_name']); ?></title>
+        <title><?php echo htmlspecialchars($this->meta_title ? $this->meta_title : core::config()['core']['site_name']); ?></title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <?php if ($this->meta_description): ?>
             <meta name="description" content="<?php echo htmlspecialchars($this->meta_description); ?>" />
@@ -32,7 +32,7 @@
     <body>
         <div class="default">
             <div class="head">
-                <div class="logo"><label><?php echo htmlspecialchars(core::config()->system['site_name']); ?></label></div>
+                <div class="logo"><label><?php echo htmlspecialchars(core::config()['core']['site_name']); ?></label></div>
                 <nav></nav>
             </div>
             <div class="main">
@@ -56,7 +56,7 @@
             </div>
         </div>
         <footer>
-            &copy; <?php echo date('Y'); ?> <?php echo htmlspecialchars(core::config()->system['site_name']); ?>
+            &copy; <?php echo date('Y'); ?> <?php echo htmlspecialchars(core::config()['core']['site_name']); ?>
         </footer>
         <!-- Page generated in <?php echo number_format((microtime(1) - APP_START_TIME) * 1000, 1); ?>ms using <?php echo number_format(memory_get_usage() / 1000, 2); ?> KB of ram -->
     </body>
