--- a/application/views/index.phtml
+++ b/application/views/index.phtml
@@ -1,7 +1,7 @@
 <?php echo $this->inc('templates/header'); ?>
 
     <div style="margin: 10px auto; font-size: 30px; font-weight: bold; width: 400px; color: #333;">
-        Welcome to PHP Neoform
+        Welcome to <?php echo core::config()['core']['site_name']; ?>
     </div>
 
 <?php echo $this->inc('templates/footer'); ?>
