--- a/application/views/templates/header.phtml
+++ b/application/views/templates/header.phtml
@@ -13,7 +13,7 @@
             <link rel="canonical" href="<?php echo core::http()->server('url') . $this->canonical_url; ?>">
         <?php endif; ?>
 
-        <!-- <link rel="shortcut icon" href="/static/favicon.ico" /> -->
+        <link rel="shortcut icon" href="#" />
 
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="/public/css/Core.css" media="all" />
