--- a/application/views/account/templates/sidebar.phtml
+++ b/application/views/account/templates/sidebar.phtml
@@ -2,17 +2,17 @@
     <div class="box">
         <div class="regular-body">
             <?php
-                $segment1 = neoform\http::instance()->segment(1);
-                $segment2 = neoform\http::instance()->segment(2);
+                $slug1 = neoform\http::instance()->slug(1);
+                $slug2 = neoform\http::instance()->slug(2);
             ?>
             <ul class="top">
-                <li class="<?php echo $segment2 === 'dashboard' ? ' active' : ''; ?>">
+                <li class="<?php echo $slug2 === 'dashboard' ? ' active' : ''; ?>">
                     <a href="/account">Home</a>
                 </li>
-                <li class="<?php echo $segment2 === 'info' || $segment2 === 'email' || $segment2 === 'password' ? ' active' : ''; ?>">
+                <li class="<?php echo $slug2 === 'info' || $slug2 === 'email' || $slug2 === 'password' ? ' active' : ''; ?>">
                     <ul>
-                        <li<?php echo $segment2 === 'email' ? ' class="active"' : ''; ?>><a href="/account/email">Change Email</a></li>
-                        <li<?php echo $segment2 === 'password' ? ' class="active"' : ''; ?>><a href="/account/password">Change Password</a></li>
+                        <li<?php echo $slug2 === 'email' ? ' class="active"' : ''; ?>><a href="/account/email">Change Email</a></li>
+                        <li<?php echo $slug2 === 'password' ? ' class="active"' : ''; ?>><a href="/account/password">Change Password</a></li>
                     </ul>
                 </li>
             </ul>
